--- a/xpi/locale/de/options.dtd
+++ b/xpi/locale/de/options.dtd
@@ -356,12 +356,11 @@
 <!ENTITY Ctr_lessaddonsbar	"Leistenhöhe verringern">
 <!ENTITY Ctr_addonbarfs		"Im 'Vollbildmodus'">
 
-<!ENTITY Ctr_animation		"Animationen">
 <!ENTITY Ctr_tabthrobber	"Standard-Ladeanzeige">
-<!ENTITY Ctr_bmanimation	"'Lesezeichen hinzufügen'">
-<!ENTITY Ctr_pananimation	"'Panel-Aufklappmenü öffnen'">
-<!ENTITY Ctr_tabanimation	"'Tab schließen und öffnen'">
-<!ENTITY Ctr_dlanimation	"'Download gestartet und beendet'">
+<!ENTITY Ctr_bmanimation	"'Lesezeichen hinzufügen'-Animation">
+<!ENTITY Ctr_pananimation	"'Panel-Aufklappmenü öffnen'-Animation">
+<!ENTITY Ctr_tabanimation	"'Tab schließen und öffnen'-Animation">
+<!ENTITY Ctr_dlanimation	"'Download gestartet und beendet'-Animation">
 <!ENTITY Ctr_fsanimation	"'Vollbild-Animationen'">
 <!ENTITY Ctr_fsaduration	"'Vollbild-Animationen' für HTML5-Inhalte">
 
@@ -413,7 +412,7 @@
 <!ENTITY goCmd.label					"Los">
 <!ENTITY Ctr_menu_restart.label			"Neustarten">
 <!ENTITY Ctr_restartapp					"'Neustarten'-Eintrag im '&brandShortName;'- und 'Datei-Menü'">
-<!ENTITY Ctr_ctrnewinv					"Neue Einstellungen in aktueller &brandShortName; Version unterstreichen">
+<!ENTITY Ctr_ctrnewinv					"Einstellungen für diese &brandShortName; Version 'unterstreichen'">
 
 <!ENTITY Ctr_openInCurrentTab			"Eingabe im aktiven Tab öffnen">
 <!ENTITY Ctr_openInNewTab				"Eingabe in neuem Tab öffnen">
