--- a/xpi/locale/dsb/options.dtd
+++ b/xpi/locale/dsb/options.dtd
@@ -16,7 +16,7 @@
 <!ENTITY Ctr_rr				"Startujśo &brandShortName; znowego!">
 <!ENTITY Ctr_window			"wokno">
 <!ENTITY Ctr_centered		"Centrěrowano">
-<!ENTITY Ctr_page			"Page">
+<!ENTITY Ctr_page			"Bok">
 
 <!ENTITY Ctr_cuibuttons		"Tłocaški">
 <!ENTITY Ctr_cuibutnormal	"Normalny">
@@ -283,7 +283,7 @@
 <!ENTITY Ctr_autocomplete	"Wuskokujuce wokno awtowudopołnjenja">
 <!ENTITY Ctr_altautocompl	"Alternatiwny naglěd">
 <!ENTITY Ctr_autocompl_it	"Zapiska 'Pytaś z...' a 'Woglědaś' wótpóraś (jolic eksistěrujotej)">
-<!ENTITY Ctr_acompl_search	"Show search engines">
+<!ENTITY Ctr_acompl_search	"Pytnice pokazaś">
 <!ENTITY Ctr_autocompl_hl	"Wuzwignjenje tekstowych wótpowědnikow">
 <!ENTITY Ctr_autocompl_rhl	"Aero-barwy za wuzwignjone wuslědki">
 <!ENTITY Ctr_autocompl_not	"Titel boka schowaś">
@@ -356,7 +356,6 @@
 <!ENTITY Ctr_lessaddonsbar	"Wusokosć pomjeńšyś">
 <!ENTITY Ctr_addonbarfs		"W modusu połneje wobrazowki">
 
-<!ENTITY Ctr_animation		"Animacija">
 <!ENTITY Ctr_tabthrobber	"Standardny zacytowański wobraz">
 <!ENTITY Ctr_bmanimation	"Animacija za 'Cytańske znamje pśidaś">
 <!ENTITY Ctr_pananimation	"Animacija za wócynjanje póla">
@@ -380,7 +379,7 @@
 <!ENTITY Ctr_fx38pocket2	"Glědajśo: Pśez pśesuwanje tłocaška 'Pocket' do 'pśiměrjeńskego wokna' pśed znjemóžnjanim toś togo nastajenja wótpórajo teke zapiski 'Pocket' w menijoma cytańskich znamjenjow a cytańskego modusa.">
 <!ENTITY Ctr_e_loop			"Hello / Loop / Telefoněrowanje a konwersacija">
 <!ENTITY Ctr_e_readermode	"Cytański modus">
-<!ENTITY Ctr_e_geolocation	"Geolocation">
+<!ENTITY Ctr_e_geolocation	"Póstajenje stojnišća">
 <!ENTITY Ctr_e_pocket		"Pocket">
 <!ENTITY Ctr_e_tabsaudioico	"Symbol za awdiowótgrawanje na rejtarkach">
 <!ENTITY Ctr_e_containertab	"Kontejnerowe rejtarki">
