--- a/xpi/locale/en-US/options.dtd
+++ b/xpi/locale/en-US/options.dtd
@@ -356,9 +356,8 @@
 <!ENTITY Ctr_lessaddonsbar	"Decrease height">
 <!ENTITY Ctr_addonbarfs		"In full screen mode">
 
-<!ENTITY Ctr_animation		"Animation">
 <!ENTITY Ctr_tabthrobber	"Default loading image">
-<!ENTITY Ctr_bmanimation	"Bookmarking animation">
+<!ENTITY Ctr_bmanimation	"Bookmark stars bookmarking animation">
 <!ENTITY Ctr_pananimation	"Panel opening animation">
 <!ENTITY Ctr_tabanimation	"Tab closing/opening animation">
 <!ENTITY Ctr_dlanimation	"'Download notification' animation">
