--- a/xpi/locale/es/options.dtd
+++ b/xpi/locale/es/options.dtd
@@ -356,14 +356,13 @@
 <!ENTITY Ctr_lessaddonsbar	"Reducir altura">
 <!ENTITY Ctr_addonbarfs		"En modo pantalla completa">
 
-<!ENTITY Ctr_animation		"Animación">
 <!ENTITY Ctr_tabthrobber	"Imagen predeterminada durante la carga">
-<!ENTITY Ctr_bmanimation	"Al añadir nuevos marcadores">
-<!ENTITY Ctr_pananimation	"De la apertura de menús de panel">
-<!ENTITY Ctr_tabanimation	"De la apertura/cierre de pestañas">
-<!ENTITY Ctr_dlanimation	"De las notificaciones de descarga">
-<!ENTITY Ctr_fsanimation	"Del cambio a pantalla completa">
-<!ENTITY Ctr_fsaduration	"Del cambio a pantalla completa para contenidos HTML5">
+<!ENTITY Ctr_bmanimation	"Animación: Al añadir nuevos marcadores">
+<!ENTITY Ctr_pananimation	"Animación: De la apertura de menús de panel">
+<!ENTITY Ctr_tabanimation	"Animación: De la apertura/cierre de pestañas">
+<!ENTITY Ctr_dlanimation	"Animación: De las notificaciones de descarga">
+<!ENTITY Ctr_fsanimation	"Animación: Del cambio a pantalla completa">
+<!ENTITY Ctr_fsaduration	"Animación: Del cambio a pantalla completa para contenidos HTML5">
 
 <!ENTITY Ctr_toolsitem		"Elemento en el menú Herramientas">
 <!ENTITY Ctr_appmenuitem	"Elemento en el menú de la aplicación">
