--- a/xpi/locale/hsb/options.dtd
+++ b/xpi/locale/hsb/options.dtd
@@ -16,7 +16,7 @@
 <!ENTITY Ctr_rr				"Startujće &brandShortName; znowa!">
 <!ENTITY Ctr_window			"wokno">
 <!ENTITY Ctr_centered		"Centrowano">
-<!ENTITY Ctr_page			"Page">
+<!ENTITY Ctr_page			"Strona">
 
 <!ENTITY Ctr_cuibuttons		"Tłóčatka">
 <!ENTITY Ctr_cuibutnormal	"Normalny">
@@ -202,7 +202,7 @@
 <!ENTITY Ctr_bmbunsortbm2	"Meni nad zapołožkami">
 <!ENTITY Ctr_bmbviewbmsb	"Wuskakowacy meni: 'Bóčnicu zapołožkow pokazać' pokazać">
 <!ENTITY Ctr_bmbviewbmtb	"Wuskakowacy meni: 'Lajstu zapołožkow pokazać' pokazać">
-<!ENTITY Ctr_bmbnounsort	"Wuskakowcy meni: 'Druhe zapołožki' schować">
+<!ENTITY Ctr_bmbnounsort	"Wuskakowacy meni: 'Druhe zapołožki' schować">
 <!ENTITY Ctr_bmbutnotext	"Tekst na lajśce zapołožkow schować">
 <!ENTITY Ctr_skipprintpr	"Ćišćerske tłóčatko: Ćišćerski přehlad přeskočić">
 <!ENTITY Ctr_tbconmenu		"Kontekstowy meni symboloweje lajsty: 'Do menija přesunyć', 'Ze symboloweje lajsty wotstronić', 'Wšě rajtarki znowa začitać/jako zapołožki składować' a 'Začinjenje rajtarka cofnyć' schować">
@@ -283,7 +283,7 @@
 <!ENTITY Ctr_autocomplete	"Wuskakowace wokno awtowudospołnjenja">
 <!ENTITY Ctr_altautocompl	"Alternatiwny napohlad">
 <!ENTITY Ctr_autocompl_it	"Zapiski 'Pytać z...' and 'Wopytać' wotstronić (jeli eksistujetej)">
-<!ENTITY Ctr_acompl_search	"Show search engines">
+<!ENTITY Ctr_acompl_search	"Pytawy pokazać">
 <!ENTITY Ctr_autocompl_hl	"Wuzběhnjenje tekstowych wotpowědnikow">
 <!ENTITY Ctr_autocompl_rhl	"Aero-barby za wuzběhnjene wuslědki">
 <!ENTITY Ctr_autocompl_not	"Titul strony schować">
@@ -356,7 +356,6 @@
 <!ENTITY Ctr_lessaddonsbar	"Wysokosć pomjeńšić">
 <!ENTITY Ctr_addonbarfs		"W modusu połneje wobrazowki">
 
-<!ENTITY Ctr_animation		"Animacija">
 <!ENTITY Ctr_tabthrobber	"Standardny začitowanski wobraz">
 <!ENTITY Ctr_bmanimation	"Animacija za 'Zapołožku přidać'">
 <!ENTITY Ctr_pananimation	"Animacija za wočinjenje pola">
@@ -380,7 +379,7 @@
 <!ENTITY Ctr_fx38pocket2	"Kedźbu: Přez přesuwanje tłóčatka 'Pocket' do 'přiměrjenskeho wokna' před znjemóžnjenjom tutoho nastajenja wotstroni tež zapiski 'Pocket' w menijomaj zapołožkow a čitanskeho modusa.">
 <!ENTITY Ctr_e_loop			"Hello / Loop / Zawołanje a konwersacija">
 <!ENTITY Ctr_e_readermode	"Čitanski modus">
-<!ENTITY Ctr_e_geolocation	"Geolocation">
+<!ENTITY Ctr_e_geolocation	"Postajenje stejnišća">
 <!ENTITY Ctr_e_pocket		"Pocket">
 <!ENTITY Ctr_e_tabsaudioico	"Symbol za awdiowothrawanje na rajtarkach">
 <!ENTITY Ctr_e_containertab	"Kontejnerowe rajtarki">
