--- a/xpi/locale/it/options.dtd
+++ b/xpi/locale/it/options.dtd
@@ -15,7 +15,7 @@
 <!ENTITY Ctr_windowcontrols	"Pulsanti controllo finestra (A tutto schermo)">
 <!ENTITY Ctr_rr				"Riavviare &brandShortName;!">
 <!ENTITY Ctr_window			"la finestra">
-<!ENTITY Ctr_centered		"Centered">
+<!ENTITY Ctr_centered		"Centrato">
 <!ENTITY Ctr_page			"Page">
 
 <!ENTITY Ctr_cuibuttons		"Pulsanti">
@@ -195,11 +195,11 @@
 <!ENTITY Ctr_bmbutton		"Menu del pulsante segnalibri">
 <!ENTITY Ctr_hiderecentbm	"Popup segnalibri: nascondi i segnalibri aggiunti di recente">
 <!ENTITY Ctr_hideeditbm		"Stella dei segnalibri: nascondi popup (se la pagina non è nei segnalibri)">
-<!ENTITY Ctr_oldplacesbut	"Bookmark items and folders on toolbar: old appearance">
-<!ENTITY Ctr_dl_pm_drop		"Download buttons panel: show dropmarker">
+<!ENTITY Ctr_oldplacesbut	"Cartelle e voci dei segnalibri sulla barra: aspetto classico">
+<!ENTITY Ctr_dl_pm_drop		"Pulsanti del pannello di download: mostra il dropmarker">
 <!ENTITY Ctr_bmbutpanelm	"Aspetto del menu a pannello">
 <!ENTITY Ctr_bmbunsortbm	"Menu dei 'Segnalibri non catalogati'">
-<!ENTITY Ctr_bmbunsortbm2	"Menu above bookmarks">
+<!ENTITY Ctr_bmbunsortbm2	"Menu sopra i segnalibri">
 <!ENTITY Ctr_bmbviewbmsb	"Mostra 'Visualizza barra laterale segnalibri'">
 <!ENTITY Ctr_bmbviewbmtb	"Mostra 'Visualizza Barra dei segnalibri'">
 <!ENTITY Ctr_bmbnounsort	"Nascondi 'Segnalibri non catalogati'">
@@ -213,7 +213,7 @@
 <!ENTITY Ctr_closegeneral	"Icone generiche di chiusura">
 
 <!ENTITY Ctr_tabsep_def		"Separatori schede predefiniti">
-<!ENTITY Ctr_fxmockup		"Mockup di &brandShortName;">
+<!ENTITY Ctr_fxmockup		"Stile di &brandShortName;">
 <!ENTITY Ctr_tabmokcolor	"Utilizza il colore bianco per i pulsanti delle schede (Chiudi, Nuova, Gruppi, Mostra tutte)">
 <!ENTITY Ctr_tabmokcolor2	"Utilizza testo bianco con ombreggiatura scura nelle schede non attive">
 <!ENTITY Ctr_tabmokcolor4	"Colore bianco per la favicon punteggiata vuota">
@@ -283,7 +283,7 @@
 <!ENTITY Ctr_autocomplete	"Completamento automatico">
 <!ENTITY Ctr_altautocompl	"Aspetto alternativo">
 <!ENTITY Ctr_autocompl_it	"Rimuovi le voci 'Cerca con...' e 'Apri' (se presenti)">
-<!ENTITY Ctr_acompl_search	"Show search engines">
+<!ENTITY Ctr_acompl_search	"Mostra i motori di ricerca">
 <!ENTITY Ctr_autocompl_hl	"Evidenziamento del testo dei risultati">
 <!ENTITY Ctr_autocompl_rhl	"Colori Aero per i risultati evidenziati">
 <!ENTITY Ctr_autocompl_not	"Nascondi il titolo della pagina">
@@ -356,7 +356,6 @@
 <!ENTITY Ctr_lessaddonsbar	"Diminuisci l'altezza">
 <!ENTITY Ctr_addonbarfs		"In modalità tutto schermo">
 
-<!ENTITY Ctr_animation		"Icone animate">
 <!ENTITY Ctr_tabthrobber	"Immagine di caricamento predefinita">
 <!ENTITY Ctr_bmanimation	"Icona animata all’aggiunta di un segnalibro">
 <!ENTITY Ctr_pananimation	"Icona animata all’apertura di un pannello">
@@ -380,7 +379,7 @@
 <!ENTITY Ctr_fx38pocket2	"Nota: muovendo il pulsante 'Pocket' nella personalizzazione prima di disattivare questa opzione, Pocket viene rimosso dai segnalibri e dal menu di lettura.">
 <!ENTITY Ctr_e_loop			"Chiamate e conversazioni (Hello)">
 <!ENTITY Ctr_e_readermode	"Modalità lettura">
-<!ENTITY Ctr_e_geolocation	"Geolocation">
+<!ENTITY Ctr_e_geolocation	"Geolocalizzazione">
 <!ENTITY Ctr_e_pocket		"Pocket">
 <!ENTITY Ctr_e_tabsaudioico	"Icone altoparlanti nelle schede">
 <!ENTITY Ctr_e_containertab	"Schede container">
@@ -401,12 +400,12 @@
 <!ENTITY Ctr_special_font	"La modifica del colore di sfondo si applica solo utilizzando il tema predefinito!">
 <!ENTITY Ctr_special_info	"Alcune opzioni si applicano solo in casi particolari">
 <!ENTITY Ctr_special_info2	"Le impostazioni sono pensate per il tema predefinito e potrebbero non funzionare con altri temi">
-<!ENTITY Ctr_special_acr	"Only report issues through official support channels and not by using 'Add-on Compatibility Reporter'!">
+<!ENTITY Ctr_special_acr	"Segnala i problemi solamente tramite i canali di supporto ufficiale e non con 'Add-on Compatibility Reporter'!">
 <!ENTITY Ctr_support		"Supporto">
 <!ENTITY Ctr_support_forum1	"MozillaZine (forum inglese)">
 <!ENTITY Ctr_support_forum2	"Camp Firefox (forum tedesco)">
 <!ENTITY Ctr_github_issues	"Segnala un problema su Github">
-<!ENTITY Ctr_newversion		"Controlla se c'è una nuova versione">
+<!ENTITY Ctr_newversion		"Controllo aggiornamenti">
 
 <!ENTITY Ctr_addon-bar.accesskey		"B">
 <!ENTITY appMenuGettingStarted.label	"Primi passi">
