--- a/xpi/locale/ja/options.dtd
+++ b/xpi/locale/ja/options.dtd
@@ -178,7 +178,7 @@
 <!ENTITY Ctr_search_oit		"検索結果を新しいタブで開く">
 <!ENTITY Ctr_osearch_meoit	"中クリック: 検索結果を新しい新しいタブで開く">
 <!ENTITY Ctr_osearch_iwidth	"ポップアップの幅を合わせる">
-<!ENTITY Ctr_osearch_cwidth	"ポップアップの幅を設定する">
+<!ENTITY Ctr_osearch_cwidth	"ポップアップの幅を指定する">
 <!ENTITY Ctr_osearch_dm		"小さなドロップマーカー">
 <!ENTITY Ctr_addonmanager	"アドオンマネージャ">
 <!ENTITY Ctr_alt_addonsp	"詳細情報: 順序を変える">
@@ -278,7 +278,7 @@
 <!ENTITY Ctr_padlock_mod	"モダン">
 <!ENTITY Ctr_padlock_ext	"空白ページで &brandShortName; アイコンを表示する">
 <!ENTITY Ctr_icopageinfo	"クリックした時ページ情報ウィンドウを開く">
-<!ENTITY Ctr_lbsbsize		"Custom width">
+<!ENTITY Ctr_lbsbsize		"幅を指定する">
 <!ENTITY Ctr_searchbar		"検索バー">
 <!ENTITY Ctr_autocomplete	"自動補完リスト">
 <!ENTITY Ctr_altautocompl	"替わりの補完候補機能で置き換える">
@@ -292,7 +292,7 @@
 <!ENTITY Ctr_lbsugresi		"候補数を制限しない">
 <!ENTITY Ctr_cresultshcb	"リストの高さを制限する: ">
 <!ENTITY Ctr_lbsugres		"候補の表示数">
-<!ENTITY Ctr_lbsbradius		"Custom border roundness">
+<!ENTITY Ctr_lbsbradius		"枠の角の丸みを指定する">
 
 <!ENTITY Ctr_menubar_items	"メニュー項目の位置">
 <!ENTITY Ctr_extrabar		"追加のツールバー">
@@ -356,7 +356,6 @@
 <!ENTITY Ctr_lessaddonsbar	"高さを減らす">
 <!ENTITY Ctr_addonbarfs		"フルスクリーンモード中も表示する">
 
-<!ENTITY Ctr_animation		"アニメーション">
 <!ENTITY Ctr_tabthrobber	"デフォルトのロードイメージ">
 <!ENTITY Ctr_bmanimation	"ブックマークする時にアニメーションする">
 <!ENTITY Ctr_pananimation	"パネルを開く時にアニメーションする">
