--- a/xpi/locale/pl/options.dtd
+++ b/xpi/locale/pl/options.dtd
@@ -356,7 +356,6 @@
 <!ENTITY Ctr_lessaddonsbar	"Zmniejsz wysokość">
 <!ENTITY Ctr_addonbarfs		"W trybie pełnoekranowym">
 
-<!ENTITY Ctr_animation		"Animacje">
 <!ENTITY Ctr_tabthrobber	"Domyślny obraz ładowania">
 <!ENTITY Ctr_bmanimation	"Animacja dodawania zakładki">
 <!ENTITY Ctr_pananimation	"Animacja otwierania panelu">
@@ -380,7 +379,7 @@
 <!ENTITY Ctr_fx38pocket2	"Uwaga: przesunięcie przycisku Pocket do strefy 'Dodatkowe funkcje i opcje' w trybie 'Dostosuj' przed wyłączeniem tego ustawienia usunie z menu podręcznych Zakładki oraz Popraw czytelność wszystkie elementy związane z Pocket.">
 <!ENTITY Ctr_e_loop			"Hello / Dzwonienie i konwersacja / Loop">
 <!ENTITY Ctr_e_readermode	"Popraw czytelność">
-<!ENTITY Ctr_e_geolocation	"Geolocation">
+<!ENTITY Ctr_e_geolocation	"Geolokalizacja">
 <!ENTITY Ctr_e_pocket		"Pocket">
 <!ENTITY Ctr_e_tabsaudioico	"Ikona odtwarzania dźwięku na kartach">
 <!ENTITY Ctr_e_containertab	"Karty z kontekstem">
