--- a/xpi/locale/ru/options.dtd
+++ b/xpi/locale/ru/options.dtd
@@ -16,7 +16,7 @@
 <!ENTITY Ctr_rr				"Перезапустите &brandShortName;!">
 <!ENTITY Ctr_window			"окно">
 <!ENTITY Ctr_centered		"По центру">
-<!ENTITY Ctr_page			"Page">
+<!ENTITY Ctr_page			"Страница">
 
 <!ENTITY Ctr_cuibuttons		"Кнопки:">
 <!ENTITY Ctr_cuibutnormal	"Обычные">
@@ -356,7 +356,6 @@
 <!ENTITY Ctr_lessaddonsbar	"Уменьшить высоту">
 <!ENTITY Ctr_addonbarfs		"В полноэкранном режиме">
 
-<!ENTITY Ctr_animation		"Анимация">
 <!ENTITY Ctr_tabthrobber	"Стандартная анимация загрузки">
 <!ENTITY Ctr_bmanimation	"Анимация создания закладок">
 <!ENTITY Ctr_pananimation	"Анимация открытия панели">
@@ -380,7 +379,7 @@
 <!ENTITY Ctr_fx38pocket2	"Примечание: Перемещение кнопки «Pocket» на страницу «Настройка &brandShortName;» перед отключением этой опции также убирает надписи «Pocket» в закладках и режиме чтения.">
 <!ENTITY Ctr_e_loop			"Hello / Вызов и разговор / Loop">
 <!ENTITY Ctr_e_readermode	"Режим чтения">
-<!ENTITY Ctr_e_geolocation	"Geolocation">
+<!ENTITY Ctr_e_geolocation	"Геолокация">
 <!ENTITY Ctr_e_pocket		"Pocket">
 <!ENTITY Ctr_e_tabsaudioico	"Значок воспроизведения аудио на вкладках">
 <!ENTITY Ctr_e_containertab	"Контейнер вкладок">
