--- a/xpi/locale/fr/options.dtd
+++ b/xpi/locale/fr/options.dtd
@@ -284,7 +284,7 @@
 <!ENTITY Ctr_autocomplete	"Fenêtre surgissante d'autocomplétion">
 <!ENTITY Ctr_altautocompl	"Apparence alternative">
 <!ENTITY Ctr_autocompl_it	"Supprimer les éléments « Rechercher avec » et « Consulter » (si présents)">
-<!ENTITY Ctr_acompl_search	"Show search engines">
+<!ENTITY Ctr_acompl_search	"Afficher les moteurs de recherche">
 <!ENTITY Ctr_autocompl_hl	"Mettre les correspondances de texte dans les résultats en :">
 <!ENTITY Ctr_autocompl_rhl	"Utiliser des couleurs Aero pour les résultats surlignés">
 <!ENTITY Ctr_autocompl_not	"Masquer les titres des pages">
@@ -357,7 +357,7 @@
 <!ENTITY Ctr_addonbarfs		"Afficher également en mode « Plein écran »">
 
 <!ENTITY Ctr_tabthrobber	"Image de chargement par défaut">
-<!ENTITY Ctr_bmanimation	"Animation du bouton étoile lors de l'ajout de nouveaux marque-pages">
+<!ENTITY Ctr_bmanimation	"Animation du bouton étoile lors de l'ajout d'un nouveau marque-page">
 <!ENTITY Ctr_pananimation	"Animation d'ouverture des panneaux">
 <!ENTITY Ctr_tabanimation	"Animation d'ouverture et de fermeture des onglets">
 <!ENTITY Ctr_dlanimation	"Animation du bouton « Téléchargement » lorsqu'un téléchargement s'achève">
@@ -379,12 +379,12 @@
 <!ENTITY Ctr_fx38pocket2	"Note : déplacer le bouton « Pocket » vers la zone « Outils et fonctionnalités supplémentaires » de la « page de personnalisation » avant de désactiver ce paramètre supprime également toutes les entrées relatives à « Pocket » du menu des marque-pages et des fenêtres surgissantes du menu du mode lecture.">
 <!ENTITY Ctr_e_loop			"Hello / Appels et conversations">
 <!ENTITY Ctr_e_readermode	"Mode lecture">
-<!ENTITY Ctr_e_geolocation	"Geolocation">
+<!ENTITY Ctr_e_geolocation	"Géolocalisation">
 <!ENTITY Ctr_e_pocket		"Pocket">
 <!ENTITY Ctr_e_tabsaudioico	"Icône de lecture audio sur les onglets">
 <!ENTITY Ctr_e_containertab	"Onglets conteneurs">
 <!ENTITY Ctr_e_findbarhl	"Surlignage avancé de la barre de recherche">
-<!ENTITY Ctr_fx50findbarhl	"Décocher ces paramètres désactive les fonctionnalités avancées de surlignage de la barre de recherche.">
+<!ENTITY Ctr_fx50findbarhl	"Décocher ces paramètres désactive les fonctionnalités de surlignage avancées de la barre de recherche.">
 <!ENTITY Ctr_e_flyweb		"FlyWeb">
 
 
