--- a/xpi/locale/zh-CN/options.dtd
+++ b/xpi/locale/zh-CN/options.dtd
@@ -265,7 +265,7 @@
 <!ENTITY Ctr_locsearchbw10	"减小地址栏与搜索栏高度(实验性)">
 <!ENTITY Ctr_urlbar_ib		"网站身份标识按钮">
 <!ENTITY Ctr_ib_nohovcolor	"鼠标悬停时不显示灰色">
-<!ENTITY Ctr_ib_graycolor	"未知网站标识与Chrome页面显示灰色">
+<!ENTITY Ctr_ib_graycolor	"未知网站标识与 Chrome 页面显示灰色">
 <!ENTITY Ctr_verifiedcolors	"已验证站点，安全站点和不安全站点显示不同颜色按钮">
 <!ENTITY Ctr_ibinfoico		"用地球图标替换“i”图标">
 <!ENTITY Ctr_ibinfoico2		"隐藏“i”图标(如果可能的话)">
@@ -278,7 +278,7 @@
 <!ENTITY Ctr_padlock_mod	"现代">
 <!ENTITY Ctr_padlock_ext	"合法的 'about' 页面显示 '&brandShortName;' 图标">
 <!ENTITY Ctr_icopageinfo	"网站图标/地球/“i”图标: “点击” 打开 “页面信息窗口”">
-<!ENTITY Ctr_lbsbsize		"Custom width">
+<!ENTITY Ctr_lbsbsize		"自定义宽度">
 <!ENTITY Ctr_searchbar		"搜索栏">
 <!ENTITY Ctr_autocomplete	"自动完成弹出框">
 <!ENTITY Ctr_altautocompl	"备选的外观">
@@ -292,7 +292,7 @@
 <!ENTITY Ctr_lbsugresi		"禁用高度限制">
 <!ENTITY Ctr_cresultshcb	"自定义高度限制: ">
 <!ENTITY Ctr_lbsugres		"结果数量">
-<!ENTITY Ctr_lbsbradius		"Custom border roundness">
+<!ENTITY Ctr_lbsbradius		"自定义边框弧度">
 
 <!ENTITY Ctr_menubar_items	"菜单项目位置">
 <!ENTITY Ctr_extrabar		"附加工具栏">
